update clean code

--- a/ois.ipynb
+++ b/ois.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4  Not fleeing        False  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4        False  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -395,20 +395,20 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#clean data of blankx\n",
-    "ois = ois.dropna(how='any')\n",
-    "ois.count()"
+    "ois_clean = ois.dropna(how='any')\n",
+    "ois_clean.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -419,19 +419,19 @@
        "Name: gender, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#find types of armed \n",
-    "ois[\"gender\"].value_counts()"
+    "ois_clean[\"gender\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -456,18 +456,18 @@
        "       'pellet gun', 'BB gun', 'incendiary device'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ois[\"armed\"].unique()"
+    "ois_clean[\"armed\"].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -486,13 +486,13 @@
        "Name: armed, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ois[\"armed\"] = ois[\"armed\"].replace(\n",
+    "ois_clean[\"armed\"] = ois_clean[\"armed\"].replace(\n",
     "    { 'nail gun': 'other',\n",
     "       'shovel': 'other', 'hammer': 'other', 'hatchet': 'other', 'sword': 'other',\n",
     "       'box cutter': 'other', 'metal object': 'other', 'screwdriver': 'other', 'lawn mower blade': 'other',\n",
@@ -510,17 +510,176 @@
     "       'pole and knife': 'knife', 'beer bottle': 'other', 'pipe': 'other', 'baseball bat and bottle': 'multiple',\n",
     "       'fireworks': 'other', 'pen': 'other', 'chainsaw': 'other', 'gun and sword': 'gun', 'gun and car': 'gun',\n",
     "       'pellet gun': 'gun', 'BB gun': 'gun', 'incendiary device': 'other'})\n",
-    "ois[\"armed\"].value_counts()"
+    "ois_clean[\"armed\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ois.to_csv(\"Output/ois.csv\")"
+    "ois_clean.to_csv(\"Output/ois_clean.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>date</th>\n",
+       "      <th>armed</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>signs_of_mental_illness</th>\n",
+       "      <th>threat_level</th>\n",
+       "      <th>flee</th>\n",
+       "      <th>body_camera</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Tim Elliot</td>\n",
+       "      <td>2015-01-02</td>\n",
+       "      <td>gun</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Shelton</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>True</td>\n",
+       "      <td>attack</td>\n",
+       "      <td>Not fleeing</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lewis Lee Lembke</td>\n",
+       "      <td>2015-01-02</td>\n",
+       "      <td>gun</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>W</td>\n",
+       "      <td>Aloha</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>False</td>\n",
+       "      <td>attack</td>\n",
+       "      <td>Not fleeing</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>John Paul Quintero</td>\n",
+       "      <td>2015-01-03</td>\n",
+       "      <td>unarmed</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>H</td>\n",
+       "      <td>Wichita</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>False</td>\n",
+       "      <td>other</td>\n",
+       "      <td>Not fleeing</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Matthew Hoffman</td>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>toy weapon</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>W</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>True</td>\n",
+       "      <td>attack</td>\n",
+       "      <td>Not fleeing</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Michael Rodriguez</td>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>other</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>H</td>\n",
+       "      <td>Evans</td>\n",
+       "      <td>CO</td>\n",
+       "      <td>False</td>\n",
+       "      <td>attack</td>\n",
+       "      <td>Not fleeing</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 name        date       armed   age gender race  \\\n",
+       "0          Tim Elliot  2015-01-02         gun  53.0      M    A   \n",
+       "1    Lewis Lee Lembke  2015-01-02         gun  47.0      M    W   \n",
+       "2  John Paul Quintero  2015-01-03     unarmed  23.0      M    H   \n",
+       "3     Matthew Hoffman  2015-01-04  toy weapon  32.0      M    W   \n",
+       "4   Michael Rodriguez  2015-01-04       other  39.0      M    H   \n",
+       "\n",
+       "            city state  signs_of_mental_illness threat_level         flee  \\\n",
+       "0        Shelton    WA                     True       attack  Not fleeing   \n",
+       "1          Aloha    OR                    False       attack  Not fleeing   \n",
+       "2        Wichita    KS                    False        other  Not fleeing   \n",
+       "3  San Francisco    CA                     True       attack  Not fleeing   \n",
+       "4          Evans    CO                    False       attack  Not fleeing   \n",
+       "\n",
+       "   body_camera  \n",
+       "0        False  \n",
+       "1        False  \n",
+       "2        False  \n",
+       "3        False  \n",
+       "4        False  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ois_clean.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
