--- a/ois.ipynb
+++ b/ois.ipynb
@@ -467,14 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gcgil\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:18: SettingWithCopyWarning: \n",
+      "C:\\Users\\gcgil\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:19: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -484,19 +484,16 @@
     {
      "data": {
       "text/plain": [
-       "gun               1678\n",
-       "knife              435\n",
-       "unarmed            232\n",
-       "vehicle            211\n",
-       "other              172\n",
-       "toy weapon         118\n",
-       "undetermined       100\n",
-       "machete             28\n",
-       "unknown weapon      26\n",
+       "gun           1678\n",
+       "knife          463\n",
+       "other          298\n",
+       "unarmed        232\n",
+       "vehicle        211\n",
+       "toy weapon     118\n",
        "Name: armed, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +516,8 @@
     "       'crowbar': 'other', 'oar': 'other', 'machete and gun': 'other', 'air conditioner': 'other',\n",
     "       'pole and knife': 'other', 'beer bottle': 'other', 'pipe': 'other', 'baseball bat and bottle': 'other',\n",
     "       'fireworks': 'other', 'pen': 'other', 'chainsaw': 'other', 'gun and sword': 'other', 'gun and car': 'other',\n",
-    "       'pellet gun': 'gun', 'BB gun': 'gun', 'incendiary device': 'other'})\n",
+    "       'pellet gun': 'gun', 'BB gun': 'gun', 'incendiary device': 'other', 'machete': 'knife', 'unknown weapon': 'other',\n",
+    "        'undetermined': 'other'})\n",
     "ois_clean[\"armed\"].value_counts()"
    ]
   },
